--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "goodkarma-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node":"v16.13.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
